--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -1,43 +1,72 @@
-.wrapper{
+.wrapper {
   display: flex;
 }
 
-.side-bar{
+.side-bar {
   background-color: #253141;
-  height: 100vh;
   width: 300px;
+  height: 100vh;
 }
 
-.side-header{
- height: 100px;
- padding: 0 20px;
+.side-bar-header {
+  height: 100px;
+  padding: 0 20px;
+  background-color: #253141;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.side-room{
+.header-name a{
+  font-size: 16px;
+  color: #FAFAFA;
+  text-decoration: none;
+}
+
+.create-room {
+  font-size: 10px;
+}
+
+.create-room a {
+  border: 1px solid lightblue;
+  padding: 14px;
+  color: deepskyblue;
+  text-decoration: none;
+}
+
+.rooms {
   background-color: #2F3E51;
   height: calc(100vh - 100px);
   padding: 0 20px;
+  overflow: scroll;
 }
 
-.chat{
+.room {
+  padding: 20px 0 40px;
+}
+
+.room-name a {
+  text-decoration: none;
+  color: white;
+}
+
+.chat {
   background-color: #ffffff;
-  height: 100vh;
   width: calc(100vw - 300px);
 }
 
-.chat-header{
-  background-color: #FFFFFF;
+.chat-header {
   height: 100px;
   padding: 0 40px;
 }
 
-.chat-main{
+.messages {
   background-color: #FAFAFA;
-  height: calc(100vh - 190px);
-  padding-top: 46px 40px 0;
+  height: calc(100vh - 100px - 90px);
+  padding: 46px 40px 0;
 }
 
-.chat-footer{
+.form {
   background-color: #DDDDDD;
   height: 90px;
   padding: 20px 40px;
